# agent_westworld

./: .gitignore  GITHUB_PAGES_SETUP.md  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  _config.yml  characters.md  index.md  narratives.md  pyproject.toml  requirements.txt  scenes.md
.cursor/: environment.json
.github/ISSUE_TEMPLATE/: character-update.md  continuity-check.md  scene-request.md
.github/workflows/: claude.yml  deploy.yml  generate-site.yml  validate.yml
canon/: characters.yml  themes.yml  timeline.yml  world.yml
canon/characters/: c_arnold.md  c_bernard.md  c_charlotte.md  c_dolores.md  c_ford.md  c_logan.md  c_maeve.md  c_mib.md  c_peter.md  c_teddy.md  c_theresa.md  c_william.md  index.md
canon/locations/: index.md  l_behaviorlab.md  l_coldstorge.md  l_escalante.md  l_mesa.md  l_mountains.md  l_pariah.md  l_ranch.md  l_sweetwater.md  l_train.md
canon/themes/: index.md  t_consciousness.md  t_control.md  t_existence.md  t_human_nature.md  t_loop.md  t_love.md  t_memory.md  t_reality.md  t_redemption.md  t_storytelling.md  t_transformation.md  t_truth.md
canon/timeline/: index.md  te_arnold_death_001.md  (+19 more)
checks/: __init__.py  continuity.py  schemas.py  validate.py  validate_markdown.py
docs/: AGENTS.md  CLAUDE.md  GENERATION.md  NARRATIVE_GENERATION.md  QUICKSTART.md  STYLE.md
narratives/: S01E01-001.md  S01E01-003.md  index.md
scripts/: convert_yaml_to_markdown.py  generate-narrative.py  generate_all.py  generate_site_content.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+24 files in other folders)
